# docs/swagger.json
@@ -298,6 +298,33 @@
                 }
             }
         },
+        "/qiniu/token": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "七牛云模块"
+                ],
+                "summary": "获取七牛云token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "目前只支持邮箱登录",
@@ -503,13 +530,22 @@
         "go-xianyu_api_v1.CreateMessageRequest": {
             "type": "object",
             "properties": {
-                "chatroomId": {
+                "buyer_id": {
                     "type": "string"
                 },
                 "content": {
                     "type": "string"
                 },
                 "create_time": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "string"
+                },
+                "read": {
+                    "type": "boolean"
+                },
+                "seller_id": {
                     "type": "string"
                 }
             }
@@ -611,6 +647,9 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "sellerId": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
