# internal/model/message.go
@@ -1,12 +1,14 @@
 package model
 
 type Message struct {
-	ID         uint   `gorm:"primarykey"`
-	CreatedAt  string `gorm:"type:string" json:"create_time"`
-	ChatroomId string `gorm:"type:string" json:"chatroomId"`
-	Content    string `gorm:"type:string" json:"content"`
-	Read       bool   `gorm:"type:bool" json:"read"`
-	// 极简的Message，其他字段的序列化给到imService调Base服务实现
+	ID        uint   `gorm:"primarykey"`
+	CreatedAt string `gorm:"type:string" json:"create_time"`
+	// ChatroomId = postId-sellerId-buyerId -> 查找会导致索引失效
+	PostId   string `gorm:"type:string;" json:"post_id"`
+	SellerId string `gorm:"type:string;index" json:"seller_id"`
+	BuyerId  string `gorm:"type:string;index" json:"buyer_id"`
+	Content  string `gorm:"type:string" json:"content"`
+	Read     bool   `gorm:"type:bool" json:"read"`
 }
 
 func (m *Message) TableName() string {
